2009-08-18  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (xtensa_create_xproperty_segments): Use
	sizeof instead of hard-coded value.
	(add_xt_block_frags): Remove unused local variable.
	(frag_flags_to_number): Change return type to flagword.  Remove
	unused local variable.

2009-08-17  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (xtensa_frob_label): move call to 
	do_align_targets to set frag_type only.

2009-08-17  Kai Tietz  <kai.tietz@onevision.com>

	* config/obj-coff-seh.c: New file.
	* config/obj-coff-seh.h: Likewise.
	* config/obj-coff.c (obj-coff-seh.c): Add include.
	(coff_pseudo_table): Add new .seh... commands.
	* config/obj-coff.h (obj_coff_seh_do_final): Add new
	function prototype.
	(obj_coff_generate_pdata): New obj-coff hook.
	* gas/write.c (size_seg): Avoid sizing of already sized
	sections.
	(write_object_file): Call conditional hook
	objc_coff_generate_pdata.
	* Makefile.am: Add dependencies for new files.
	* Makefile.in: Regenerated.

2009-08-17  Nick Clifton  <nickc@redhat.com>

	* config/tc-microblaze.c: Include safe-ctype.h instad of ctype.h.
	(parse_reg): Use safe-ctype.h macros.
	(parse_exp): Likewise.
	(md_assemble): Likewise.

2009-08-11  DJ Delorie  <dj@redhat.com>

	* config/tc-mep.c (md_estimate_size_before_relax): Handle weak
	symbols correctly.
	(md_convert_frag): Likewise.
	(md_pcrel_from_section): Likewise.
	(mep_force_relocation): Likewise.

2009-08-11  Bernd Schmidt  <bernd.schmidt@analog.com>

	* config/bfin-parse.y (gen_multi_instr_1): New function.
	(asm): Use it instead of bfin_gen_multi_instr.
	(error): Add a format string when calling as_bad.
	* config/bfin-defs.h (insn_regmask): Declare.
	* config/tc-bfin.c (DREG_MASK, DREGH_MASK, DREGL_MASK, IREG_MASK): New
	macros.
	(decode_ProgCtrl_0, decode_LDSTpmod_0, decode_dagMODim_0,
	decode_dagMODik_0, decode_dspLDST_0, decode_LDST_0, decode_LDSTiiFP_0,
	decode_LDSTii_0, decode_dsp32mac_0, decode_dsp32mult_0,